--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,80 +1,134 @@
 name: Build React Native Android App
  
 on:
+
   push:
+
     branches:
+
       - master
+
   pull_request:
+
     branches:
+
       - master
-
+ 
 jobs:
-  build:
-    name: Build Android APK
-    runs-on: ubuntu-latest
 
+  build:
+
+    name: Build Android APK
+
+    runs-on: ubuntu-latest
+ 
     env:
+
       ORG_GRADLE_JVMARGS: -Xmx4g  # ✅ Increase heap size for Gradle
  
     steps:
+
     # Step 1: Checkout the code
+
     - name: Checkout code
+
       uses: actions/checkout@v3
+ 
+    # Step 2: Install OpenJDK 21
 
-    # Step 2: Setup Java environment
-    - name: Set up JDK
-      uses: actions/setup-java@v3
-      with:
-        distribution: 'zulu'
-        java-version: '17'  # Use the version compatible with your Android Gradle plugin
+    - name: Install OpenJDK 21
 
-    # Step 3: Install Node.js
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18' # Ensure compatibility with your package.json
-
-    # Step 4: Install Yarn
-    - name: Install Yarn
-      run: npm install -g yarn
-
-    # Step 5: Install project dependencies
-    - name: Install dependencies
-      run: yarn install
-
-    # Step 6: Set up Android environment
-    - name: Set up Android SDK
-      uses: android-actions/setup-android@v2
-      with:
-        api-level: 33  # Adjust based on your app's requirements
-        build-tools: 33.0.2
-        cache: true
-
-    # Step 7: Grant execute permissions to gradlew
-    - name: Grant execute permission for gradlew
-      run: chmod +x gradlew
-      working-directory: android
-
-    # Step 7.1: Build the Android APK
-    - name: Build APK
-      run: ./gradlew assembleRelease
-      working-directory: android
-
-    # Step 8: upload the APK
-    - name: Upload APK to S3 with unique name
       run: |
+
+        sudo apt update
+
+        sudo apt install -y openjdk-21-jdk
+
+        java -version
+ 
+    # Step 3: Install Node.js
+
+    - name: Set up Node.js
+
+      uses: actions/setup-node@v3
+
+      with:
+
+        node-version: '18' # Ensure compatibility with your package.json
+ 
+    # Step 4: Install Yarn
+
+    - name: Install Yarn
+
+      run: npm install -g yarn
+ 
+    # Step 5: Install project dependencies
+
+    - name: Install dependencies
+
+      run: yarn install
+ 
+    # Step 6: Set up Android environment
+
+    - name: Set up Android SDK
+
+      uses: android-actions/setup-android@v2
+
+      with:
+
+        api-level: 33  # Adjust based on your app's requirements
+
+        build-tools: 33.0.2
+
+        cache: true
+ 
+    # Step 7: Grant execute permissions to gradlew
+
+    - name: Grant execute permission for gradlew
+
+      run: chmod +x gradlew
+
+      working-directory: android
+ 
+    # Step 7.1: Build the Android APK
+
+    - name: Build APK
+
+      run: ./gradlew assembleRelease
+
+      working-directory: android
+ 
+    # Step 8: Upload the APK
+
+    - name: Upload APK to S3 with unique name
+
+      run: |
+
         DATE_TAG=$(date +%Y%m%d-%H%M%S)
+
         FILE_NAME="app-release-$DATE_TAG-${GITHUB_SHA::7}.apk"
-        S3_URI="s3://$S3_BUCKET_NAME/$FILE_NAME"
-        PUBLIC_URL="https://${S3_BUCKET_NAME}.s3.${AWS_REGION}.amazonaws.com/$FILE_NAME"
 
+        S3_URI="s3://${{ secrets.S3_BUCKET_NAME }}/${{ secrets.S3_BUCKET_PATH }}/$FILE_NAME"
+
+        PUBLIC_URL="https://${{ secrets.S3_BUCKET_NAME }}.s3.${{ secrets.AWS_REGION }}.amazonaws.com/${{ secrets.S3_BUCKET_PATH }}/$FILE_NAME"
+ 
         aws s3 cp android/app/build/outputs/apk/release/app-release.apk "$S3_URI" \
-            --region "$AWS_REGION" --acl public-read
 
+            --region "${{ secrets.AWS_REGION }}"
+ 
         echo "✅ APK uploaded: $PUBLIC_URL"
+
         echo "::notice title=Download APK::$PUBLIC_URL"
+
       env:
+
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
         AWS_REGION: ${{ secrets.AWS_REGION }}
+
         S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+
+        S3_BUCKET_PATH: ${{ secrets.S3_BUCKET_PATH }}
+ 
