--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -2,12 +2,11 @@ name: Build React Native Android App
 
 on:
   push:
-    branches:
-      - master
+    branches: [master]
   pull_request:
-    branches:
-      - master
-
+    branches: [master]
+    
+    
 jobs:
   build:
     name: Build Android APK
@@ -20,22 +19,40 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v3
 
-      - name: Install OpenJDK 21
-        run: |
-          sudo apt update
-          sudo apt install -y openjdk-21-jdk
-          java -version
+      - name: Set up JDK 21
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '21'
 
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
 
+      - name: Cache node_modules
+        uses: actions/cache@v3
+        with:
+          path: node_modules
+          key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            yarn-${{ runner.os }}-
+
       - name: Install Yarn
         run: npm install -g yarn
 
       - name: Install dependencies
         run: yarn install
+
+      - name: Cache Gradle
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            gradle-${{ runner.os }}-
 
       - name: Set up Android SDK
         uses: android-actions/setup-android@v2
@@ -54,29 +71,13 @@ jobs:
 
       - name: Upload APK to S3 with unique name
         run: |
-          set -e
-
-          echo "🔍 Verifying AWS variables:"
-          echo "  AWS_REGION=$AWS_REGION"
-          echo "  S3_BUCKET_NAME=$S3_BUCKET_NAME"
-          echo "  S3_BUCKET_PATH=$S3_BUCKET_PATH"
-
           DATE_TAG=$(date +%Y%m%d-%H%M%S)
           FILE_NAME="app-release-$DATE_TAG-${GITHUB_SHA::7}.apk"
-
-          if [ -n "$S3_BUCKET_PATH" ]; then
-            S3_URI="s3://$S3_BUCKET_NAME/$S3_BUCKET_PATH/$FILE_NAME"
-            PUBLIC_URL="https://$S3_BUCKET_NAME.s3.$AWS_REGION.amazonaws.com/$S3_BUCKET_PATH/$FILE_NAME"
-          else
-            S3_URI="s3://$S3_BUCKET_NAME/$FILE_NAME"
-            PUBLIC_URL="https://$S3_BUCKET_NAME.s3.$AWS_REGION.amazonaws.com/$FILE_NAME"
-          fi
-
-          echo "📤 Uploading to: $S3_URI"
+          S3_URI="s3://$S3_BUCKET_NAME/$S3_BUCKET_PATH/$FILE_NAME"
+          PUBLIC_URL="https://${S3_BUCKET_NAME}.s3.${AWS_REGION}.amazonaws.com/$S3_BUCKET_PATH/$FILE_NAME"
 
           aws s3 cp android/app/build/outputs/apk/release/app-release.apk "$S3_URI" \
-            --region "$AWS_REGION" \
-            --endpoint-url "https://s3.$AWS_REGION.amazonaws.com"
+            --region "$AWS_REGION" --acl public-read
 
           echo "✅ APK uploaded: $PUBLIC_URL"
           echo "::notice title=Download APK::$PUBLIC_URL"
