--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -5,7 +5,8 @@ on:
     branches: [master]
   pull_request:
     branches: [master]
-
+    
+    
 jobs:
   build:
     name: Build Android APK
@@ -68,13 +69,6 @@ jobs:
         run: ./gradlew assembleRelease
         working-directory: android
 
-      - name: Ensure APK exists before uploading
-        run: |
-          if [ ! -f android/app/build/outputs/apk/release/app-release.apk ]; then
-            echo "APK not found!"
-            exit 1
-          fi
-
       - name: Upload APK to S3 with unique name
         run: |
           DATE_TAG=$(date +%Y%m%d-%H%M%S)
@@ -85,7 +79,7 @@ jobs:
           aws s3 cp android/app/build/outputs/apk/release/app-release.apk "$S3_URI" \
             --region "$AWS_REGION" --acl public-read
 
-          echo " APK uploaded: $PUBLIC_URL"
+          echo "✅ APK uploaded: $PUBLIC_URL"
           echo "::notice title=Download APK::$PUBLIC_URL"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -93,9 +87,3 @@ jobs:
           AWS_REGION: ${{ secrets.AWS_REGION }}
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
           S3_BUCKET_PATH: ${{ secrets.S3_BUCKET_PATH }}
-
-      - name: Upload APK as GitHub Actions artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: app-release
-          path: android/app/build/outputs/apk/release/app-release.apk
