--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,89 +1,143 @@
 name: Build React Native Android App
-
+ 
 on:
+
   push:
+
     branches: [master]
+
   pull_request:
+
     branches: [master]
-    
-    
+ 
 jobs:
+
   build:
+
     name: Build Android APK
+
     runs-on: self-hosted
-
+ 
     env:
+
       ORG_GRADLE_JVMARGS: -Xmx4g
-
+ 
     steps:
+
       - name: Checkout code
+
         uses: actions/checkout@v3
-
+ 
       - name: Set up JDK 21
+
         uses: actions/setup-java@v3
+
         with:
+
           distribution: 'zulu'
+
           java-version: '21'
-
+ 
       - name: Set up Node.js
+
         uses: actions/setup-node@v3
+
         with:
+
           node-version: '18'
-
+ 
       - name: Cache node_modules
+
         uses: actions/cache@v3
+
         with:
+
           path: node_modules
+
           key: yarn-${{ runner.os }}-${{ hashFiles('yarn.lock') }}
+
           restore-keys: |
+
             yarn-${{ runner.os }}-
-
+ 
       - name: Install Yarn
+
         run: npm install -g yarn
-
+ 
       - name: Install dependencies
+
         run: yarn install
-
+ 
       - name: Cache Gradle
+
         uses: actions/cache@v3
+
         with:
+
           path: |
+
             ~/.gradle/caches
+
             ~/.gradle/wrapper
+
           key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+
           restore-keys: |
+
             gradle-${{ runner.os }}-
-
+ 
       - name: Set up Android SDK
+
         uses: android-actions/setup-android@v2
+
         with:
+
           api-level: 33
+
           build-tools: 33.0.2
+
           cache: true
-
+ 
       - name: Grant execute permission for gradlew
+
         run: chmod +x gradlew
-        working-directory: android
 
+        working-directory: android
+ 
       - name: Build APK
+
         run: ./gradlew assembleRelease
+
         working-directory: android
-
+ 
       - name: Upload APK to S3 with unique name
+
         run: |
+
           DATE_TAG=$(date +%Y%m%d-%H%M%S)
+
           FILE_NAME="app-release-$DATE_TAG-${GITHUB_SHA::7}.apk"
+
           S3_URI="s3://$S3_BUCKET_NAME/$S3_BUCKET_PATH/$FILE_NAME"
+
           PUBLIC_URL="https://${S3_BUCKET_NAME}.s3.${AWS_REGION}.amazonaws.com/$S3_BUCKET_PATH/$FILE_NAME"
+ 
+          # Upload the APK file without ACL
 
-          aws s3 cp android/app/build/outputs/apk/release/app-release.apk "$S3_URI" \
-            --region "$AWS_REGION" --acl public-read
-
+          aws s3 cp android/app/build/outputs/apk/release/app-release.apk "$S3_URI" --region "$AWS_REGION"
+ 
           echo "✅ APK uploaded: $PUBLIC_URL"
+
           echo "::notice title=Download APK::$PUBLIC_URL"
+
         env:
+
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+
           AWS_REGION: ${{ secrets.AWS_REGION }}
+
           S3_BUCKET_NAME: ${{ secrets.S3_BUCKET_NAME }}
+
           S3_BUCKET_PATH: ${{ secrets.S3_BUCKET_PATH }}
